--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Nav from "../components/Nav.astro";
 import Card from "../components/Card.astro";
 ---
 
@@ -11,8 +12,11 @@ import Card from "../components/Card.astro";
     <title>Astro</title>
   </head>
   <body>
+    <header>
+      <Nav />
+    </header>
     <main>
-		<Card />  
-	</main>
+      <Card />
+    </main>
   </body>
 </html>
