struggling with the footer

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -26,15 +26,15 @@
 ul li{
 
     list-style: none;
-    display: inline;
+    display: inline-block;
     font-family: "FaraosFont";
     font-size: 1.5rem;
     padding-right: 1rem;
 }    
 
 ul{
-    margin-right: 2rem;
-  margin-left: 2rem;
+    margin-right: 4rem;
+  margin-left: 16rem;
 }
 
 .logo{
