--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Nav from "../components/Nav.astro";
 import Card from "../components/Card.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -18,5 +19,6 @@ import Card from "../components/Card.astro";
     <main>
       <Card />
     </main>
+    <Footer />
   </body>
 </html>
