--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,41 +8,53 @@
   <li>Om Faraos ↓</li>
 </div>
 
-<img src="../src/icons/Certifications.svg" alt="">
+<img id="certifications" src="../src/icons/Certifications.svg" alt="" />
 
 <footer>
-
-<div class="flex-container">
+  <div class="flex-container">
     <div class="flex-item">
-        <h5>Ring os!</h5>
-        <p>0045 33 67 20 14
-        </p>
-        <p>info@faraos.com</p>  </div>
+      <div id="phone">
+        <img src="../src/icons/phone.svg" alt="" srcset="" />
+        <div id="phoneinfocontainer">
+          <h5>Ring os!</h5>
+          <p>0045 33 67 20 14</p>
+        </div>
+      </div>
+      <div id="email">
+        <img src="../src/icons/Email.svg" alt="" srcset="" />
+        <p>info@faraos.com</p>
+      </div>
+    </div>
 
     <div class="flex-item2">
-      <p> Butikker</p> 
-      <p> Kundeservice </p>
-       <p> Åbningstider</p>
-      <p>  Kalender</p>
+      <p>Butikker</p>
+      <p>Kundeservice</p>
+      <p>Åbningstider</p>
+      <p>Kalender</p>
     </div>
-       
-      
-  <div class="flex-item3">
-  <p>Join us</p>
 
+    <div class="flex-item3">
+      <div class="signupbutt">
+        <div class="signup"> <p>Sign up for our newsletter now!</p></div>
+        <div class="button"><img src="../src/icons/button.svg" alt=""></div>
+     </div> </div>
+     
+    <div class="flex-item4">
+      <div class="lastcontainer">
+        <div class="follow"><h5>Følg os!</h5></div>
+        <div class="us"><img src="../src/icons/ig.svg" alt=""><img src="../src/icons/fb.svg" alt=""></div>
+     </div>
+    </div>
+    
    
   </div>
-
-</div>
-
 </footer>
 
 <style>
-
-@font-face {
+  @font-face {
     font-family: FaraosFont;
     src: url(fonts/faraos2017.ttf);
-  } 
+  }
 
   @font-face {
     font-family: myFirstFont;
@@ -52,63 +64,130 @@
     text-align: center;
     font-family: FaraosFont;
     font-size: 2rem;
-   
   }
   li {
     list-style: none;
     display: inline-block;
-   padding-right: 1rem;
+    padding-right: 1rem;
   }
 
-  img{
-
+  #certifications {
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5rem;
   }
 
-  footer{
-    background-color: #F2474B;
+  footer {
+    background-color: #f2474b;
    
   }
 
-  footer p{
+  footer p {
     font-family: myFirstFont;
     font-size: 0.8rem;
-   
- 
   }
 
   .flex-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center; /* centers the flex items vertically */
-}
+    display: flex;
+    flex-direction: row;
+    align-items: center; /* centers the flex items vertically */
+    margin-left: 3rem;
+   
+  }
 
-.flex-item {
-  flex-basis: 25%; /* sets the width of each flex item to 25% of the flex container */
-margin-left: 2rem;
- 
-}
+  .flex-item {
+    flex-basis: 25%; /* sets the width of each flex item to 25% of the flex container */
+    margin-left: 2rem;
+  }
 
-.flex-item h5{
+  #phone,
+  #email {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+  #phoneinfocontainer > h5,
+  p {
+    margin: unset;
+  }
+
+  .flex-item h5, .flex-item4 h5 {
     font-family: FaraosFont;
     font-size: 1.5rem;
+  }
 
-}
+  .flex-item3 {
+    flex-basis: 35%;
+  }
 
-.flex-item3 {
-   
-    flex-basis: 35%
-    
-}
-
-.flex-item3 p{
+  .flex-item3 p {
     margin-left: 8rem;
+  }
+
+
+  .signupbutt {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: normal;
+  align-items: normal;
+  align-content: normal;
 }
 
+.signup {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
 
+.button {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
 
+.button img{
+margin-left: 6rem;
+margin-top: 1rem;
+}
 
+.signup p{
+text-align: left;
+}
+
+.lastcontainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: normal;
+  align-items: normal;
+  align-content: normal;
+  margin-left: 4rem;
+  margin-bottom: 3rem;
+}
+
+.follow {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
+
+.us {
+  display: block;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
+}
 </style>
