--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
+import "../styles/stylles.css";
 import Nav from "../components/Nav.astro";
 import Card from "../components/Card.astro";
 import Footer from "../components/Footer.astro";
+import Helt from "../components/Helt.astro";
 ---
 
 <html lang="en">
@@ -17,8 +19,10 @@ import Footer from "../components/Footer.astro";
       <Nav />
     </header>
     <main>
-      <Card />
+      <Helt>
+        <Card />
+      </Helt>
+      <Footer />
     </main>
-    <Footer />
   </body>
 </html>
