--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -89,7 +89,8 @@
   }
 
   hr {
-    border-top: 1px solid black;
+    border-top: 1px solid ;
+    border-color: var(--sdGrey600);
   }
 </style>
 
