--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Nav from "../components/Nav.astro";
 import Card from "../components/Card.astro";
 import Footer from "../components/Footer.astro";
 import Helt from "../components/Helt.astro";
+import Categorygallery from "../components/Categorygallery.astro";
+import CategorygalleryItem from "../components/CategorygalleryItem.astro";
 ---
 
 <html lang="en">
@@ -19,10 +21,26 @@ import Helt from "../components/Helt.astro";
       <Nav />
     </header>
     <main>
-      <Helt>
-        <Card />
-      </Helt>
-      <Footer />
+      <Helt />
+      <Categorygallery>
+        <CategorygalleryItem imgPath="../src/img/dkcomics.svg" />
+        <CategorygalleryItem imgPath="../src/img/us-comics.svg" />
+        <CategorygalleryItem imgPath="../src/img/dkcomics.svg" />
+        <CategorygalleryItem imgPath="../src/img/us-comics.svg" />
+        <CategorygalleryItem imgPath="../src/img/dkcomics.svg" />
+        <CategorygalleryItem imgPath="../src/img/us-comics.svg" />
+        <CategorygalleryItem imgPath="../src/img/dkcomics.svg" />
+        <CategorygalleryItem imgPath="../src/img/us-comics.svg" />
+        <CategorygalleryItem imgPath="../src/img/dkcomics.svg" />
+        <CategorygalleryItem imgPath="../src/img/us-comics.svg" />
+        <CategorygalleryItem imgPath="../src/img/dkcomics.svg" />
+        <CategorygalleryItem imgPath="../src/img/us-comics.svg" />
+      </Categorygallery>
+      <Card />
+      
     </main>
+    <footer>
+      <Footer />
+    </footer>
   </body>
 </html>
