--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -89,8 +89,9 @@
   }
 
   hr {
-    border-top: 1px solid ;
+    border-top: 1px solid;
     border-color: var(--sdGrey600);
+    margin-left: var(--sdSpacing20);
+    margin-right: var(--sdSpacing20);
   }
 </style>
-
