--- a/src/components/ProductCardBestseller.astro
+++ b/src/components/ProductCardBestseller.astro
@@ -1,76 +1,87 @@
 ---
 const {
   imgPath,
+  staricon,
   name1,
   name2,
   bestseller,
   discount,
   nyhed,
   status,
-  shipment,
-  price,
-  discountprice,
+  shipping,
+  currentprice,
+  originalprice,
+  type,
 } = Astro.props;
+
+import Ctabutton from "./Ctabutton.astro";
 ---
 
 <article>
-  <a href="">
+  <a class="card" href="">
     <div class="topcarditems">
       <svg
-        width="26"
-        height="27"
-        viewBox="0 0 26 25"
+        width="32"
+        height="31"
+        viewBox="0 0 32 31"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
       >
-        <ellipse cx="13" cy="12.5" rx="13" ry="12.5" fill="#D9D9D9"></ellipse>
+        <ellipse cx="16" cy="15.5001" rx="16" ry="15.3846" fill="#D9D9D9"
+        ></ellipse>
         <path
-          d="M13.0228 20.5042L11.9353 19.4251C8.07283 15.6077 5.52283 13.09 5.52283 10.0001C5.52283 7.48235 7.33783 5.50415 9.64783 5.50415C10.9528 5.50415 12.2053 6.45783 13.0228 7.50415C13.8403 6.45783 15.0928 5.50415 16.3978 5.50415C18.7078 5.50415 20.5228 7.48235 20.5228 10.0001C20.5228 13.09 17.9728 15.6077 14.1103 19.4333L13.0228 20.5042Z"
+          d="M16.0281 25.3514L14.6896 24.0234C9.93579 19.325 6.79733 16.2263 6.79733 12.4233C6.79733 9.3246 9.03118 6.88989 11.8743 6.88989C13.4804 6.88989 15.0219 8.06365 16.0281 9.35143C17.0343 8.06365 18.5758 6.88989 20.1819 6.88989C23.025 6.88989 25.2589 9.3246 25.2589 12.4233C25.2589 16.2263 22.1204 19.325 17.3666 24.0335L16.0281 25.3514Z"
           fill="#FCF9F9"></path>
       </svg>
 
       <div class="bestseller">
-        <p class="roboto">BESTSELLER</p><img
+        <p class="roboto">{bestseller}</p><img
           class="star"
-          src="../src/icons/star.svg"
+          src={staricon}
           alt=""
         />
       </div>
       <div class="discountprc">
-        <p class="roboto discountprc">-8%</p>
+        <p class="roboto">{discount}</p>
       </div>
     </div>
 
-    <img class="itemImg" src="../src/img/chucky1.jpg" alt="" />
+    <img class="itemImg" src={imgPath} alt="" />
     <div class="intemInfo">
-      <p class="name1 roboto">Bride of Chucky 1/1 Chucky Doll 76 cm{}</p>
-      <p class="name2 roboto">Neca Child's Play Prop Replica{}</p>
+      <p class="name1 roboto">{name1}</p>
+      <!-- Bride of Chucky 1/1 Chucky Doll 76 cm -->
+
+      <p class="name2 roboto">{name2}</p>
+      <!-- Neca Child's Play Prop Replica -->
       <div class="itemstatus">
         <p class="roboto">
-          <span id="stats">FORUDBESTILINGSVARE{}</span>
-          <span id="shpmnt">| Afsendelse: 31-08-2023{}</span>
+          <span id="stats">{status}</span>
+
+          <span id="shpmnt">| {shipping}</span>
         </p>
       </div>
       <div class="pricing">
-        <p class="roboto">DKK <span class="pricedicounted">5495{}</span></p>
-        <p class="roboto">DKK <span class="priceorg">5999{}</span></p>
+        <p class="roboto">
+          DKK <span class="pricedicounted">{currentprice}</span>
+        </p>
+        <p class="roboto">DKK <span class="priceorg">{originalprice}</span></p>
       </div>
     </div>
-    <button></button>
+    <Ctabutton class="ctabtn" variant="preorder" type="productcard">
+      <p class="ctabuttontext">{type}</p>
+    </Ctabutton>
   </a>
 </article>
 
 <style>
-  a {
-    text-decoration: none;
+  a.card {
     display: grid;
     grid-template-rows: repeat(4);
   }
 
   article {
     min-width: var(--sdWidth200);
-    max-width: 350px;
-    /* max-height: var(--sdHeight515); */
+    max-width: 320px;
     border: var(--sdBwidth1) solid;
     border-color: var(--sdGrey400);
     border-radius: var(--sdBorderRadius3);
@@ -89,11 +100,14 @@ const {
     position: absolute;
     z-index: 1;
     width: 97%;
+    align-items: center;
+  }
+  .star {
+    scale: 1.3;
   }
 
   svg :hover {
-    fill: var(--sdYellow);
-    scale: 1.3;
+    fill: var(--sdYellow2);
   }
 
   .bestseller {
@@ -102,35 +116,28 @@ const {
     gap: var(--sdSpacing5);
     justify-content: center;
     align-items: center;
-    max-width: min-content;
     padding-left: 10px;
     padding-right: 10px;
     height: 40px;
   }
 
   div.bestseller > p {
-    color: var(--sdYellow);
+    color: var(--sdYellow2);
     font-size: var(--sdFontSize0);
   }
 
-  div.discountprc {
-    height: 40px;
+  .discountprc {
+    display: grid;
     font-size: var(--sdFontSize0);
+    color: var(--sdWhite);
     background-color: var(--sdRed);
     padding-left: 10px;
     padding-right: 10px;
-    font-weight: var(--sdFontWeightsRobotoBold);
     height: 40px;
+    align-items: center;
   }
 
-  .star {
-    scale: 1.3;
-  }
-
-  .name {
-    size: var(--sdFontSize4);
-    font-weight: var(--sdFontWeightsRobotoMedium);
-    color: red;
+  .newitem {
   }
 
   .name1,
@@ -138,11 +145,21 @@ const {
     margin-top: 5px;
     margin-bottom: 5px;
     color: var(--sdBlack);
+    font-size: var(--sdFontSize2);
+    font-weight: var(--sdFontWeightsRobotoMedium);
+  }
+
+  .name2 {
+    margin-bottom: 33px;
+  }
+
+  .itemstatus {
+    margin-top: var(--sdSpacing20);
   }
 
   #stats {
     font-size: var(--sdFontSize0);
-    color: var(--sdBlue);
+    color: var(--sdBlue2);
     font-weight: 700;
   }
 
@@ -156,6 +173,8 @@ const {
     flex-direction: row;
     align-items: flex-start;
     gap: var(--sdSpacing110);
+    margin-top: var(--sdSpacing20);
+    margin-bottom: var(--sdSpacing10);
   }
 
   .pricing > p:nth-child(1) {
@@ -175,6 +194,20 @@ const {
   }
 
   .pricedicounted {
+    font-weight: var(--sdFontWeightsRobotoBlack);
+  }
+
+  .ctabtn {
+    display: block;
+    margin: auto;
+  }
+
+  p {
+    margin-top: var(--sdSpacing5);
+    margin-bottom: var(--sdSpacing5);
+  }
+
+  p.ctabuttontext {
     font-weight: var(--sdFontWeightsRobotoBlack);
   }
 </style>
